--- a/00_clean_pos.qmd
+++ b/00_clean_pos.qmd
@@ -1,5 +1,5 @@
 ---
-title: "Script 00: Purchase Orders"
+title: "Clean Purchase Orders"
 format: html
 ---
 
@@ -36,6 +36,9 @@ path_r071_ga0 <-
 
 path_r071_gd0 <-
   glue("{dir_r071}/r071_GD0_{fy}.xls")
+
+path_r071 <-
+  glue("{dir_r071}/r071_{fy}.xls")
 ```
 
 Read
@@ -53,15 +56,19 @@ r209 <- r209_raw
 R071
 
 ```{r}
-r071_ga0 <-
-  read_excel(path_r071_ga0, col_types = "text", range = "A23:AY8171") %>%
-  clean_names()
+# r071_ga0 <-
+#   read_excel(path_r071_ga0, col_types = "text", range = "A23:AY8171") %>%
+#   clean_names()
+#
+# r071_gd0 <-
+#   read_excel(path_r071_gd0, col_types = "text", range = "A23:AY5118") %>%
+#   clean_names()
+#
+# r071_raw <- bind_rows(r071_ga0, r071_gd0)
 
-r071_gd0 <-
-  read_excel(path_r071_gd0, col_types = "text", range = "A23:AY5118") %>%
+r071_raw <-
+  read_excel(path_r071, col_types = "text", range = "A23:AY29404") %>%
   clean_names()
-
-r071_raw <- bind_rows(r071_ga0, r071_gd0)
 
 r071 <- r071_raw
 ```
@@ -78,13 +85,8 @@ Clean and transform
 pos <-
   r071_rename %>%
   filter(buyer_agency == "GA0" | (project %in% r209$project)) %>%
-  group_by(supplier_name, po_number, po_title) %>%
+  group_by(po_number, po_title) %>%
   summarize(
-    cost_center_description = str_flatten(
-      sort(unique(cost_center_description))[1:3],
-      collapse = "; ",
-      na.rm = TRUE
-    ),
     po_line_item_description = str_flatten(
       sort(unique(po_line_item_description))[1:3],
       collapse = "; ",
@@ -92,16 +94,14 @@ pos <-
     ),
   ) %>%
   select(
-    cost_center_description, supplier_name,
-    po_title, po_line_item_description, po_number,
+    po_number, po_title, po_line_item_description,
   ) %>%
   arrange(
-    cost_center_description, supplier_name,
-    po_title, po_line_item_description, po_number,
+    po_number, po_title, po_line_item_description,
   )
 ```
 
-Write
+Write purchase orders
 
 ```{r}
 pos %>% write_xlsx("data/pos.xlsx")
